--- a/contents/whyla.tex
+++ b/contents/whyla.tex
@@ -5,7 +5,7 @@
 % 原则上，每一章开头不可马上进入第一节
 % 需要一段引文提要起到 TL;DR 的作用
 使用 Unix 系操作系统尤其是 OS X 的同学越来越多，
-而国内学校发布公共文档仍旧多使用微软的Office系列和windows操作系统的内置字体。
+而在国内，学校发布公共文档仍旧多使用微软的Office系列和windows操作系统的内置字体。
 在这种矛盾下，
 惯用Unix系的同学在通过相应兼容方案打开或编辑此类文档时遭遇诸多不便，
 甚至被迫切换到虚拟机环境下撰写论文。
@@ -37,9 +37,9 @@
 \section{\LaTeX  简介}
 一本图书出版的第一步一般是由作者将他们的手稿交给出版公司，
 由专业的排版人员负责整本书的排版，
-而学位论文的撰写工作其实同时包括了这两个程序。
+而目前学位论文的撰写工作其实同时包括了这两个程序。
 本模板发布的初衷即是把同学们在排版方面的时间成本降到最小，
-得以保证足够的精力\textbf{专注于内容本身}的撰写。
+得以保证有足够的精力\textbf{专注于内容本身}的撰写。
 
 \subsection{\LaTeX 极简史}
 四十年前，高德纳为了亲自排版他的《计算机程序设计艺术》，
@@ -57,39 +57,39 @@
 
 原始的latex 编译系统不支持东方文字（CJK字符）
 \footnote{包括大陆新加坡简体汉字、港台繁體漢字、日本戦後新字体、戰前舊字體、カタカナ、ひらがな、언문等}
-排版。
-本模板默认使用使用 xelatex 引入 XeCJK 宏包解决中文和西文混排问题。
+的排版。
+本模板默认使用使用 xelatex 引入 XeCJK 宏包解决东西方文字的混排问题。
 
 \subsection{发行版和文本编辑器}
 \begin{verbatim}
 地址: https://github.com/KwenString/Thesis-SE-ZJU-LaTeX
 \end{verbatim}
 如果你能通过README编译出此份文档，
-说明您的机器上已经安装好了一个\TeX 排版系统的发行版(比如MacTeX 2015)。
+说明您的机器上已经安装好了一个\TeX 排版系统的发行版(比如MacTeX 201x)。
 发行版融合了非常多的工具（包括命令行工具和窗口程序）和宏包，
 像Linux的发行版一样有bash, coreutil, gcc 这些工具集。
-您在本项目README中看到的\texttt{latexmk}就是发行版包含的一个重要命令行工具。
+您在本项目README中看到的\texttt{latexmk}就是发行版包含的一个命令行工具。
 和Linux发行版一样，由于排版系统的发行版也需要包管理，
 在 OS X 下，可以使用 MacTeX 自带的图形化包管理工具 TeX Live Utility，
 也可以使用命令行工具\texttt{tlmgr}操作。
 
 论文的\LaTeX 源码自然是纯文本，
 您可以使用平时编码时最惯用的文本编辑器完成。
-若您仅通过集成开发环境（IDE）完成编码工作，
-那推荐使用简单易学的Sublime Text
-\footnote{请不要陷入无意义的编辑器党争，适合自己的才是坠吼的。}
-安装相应语法高亮插件。
-使用windows的同学，切记不可使用在纯文本前擅自插入BOM标记的
-windows记事本程序，另外，文本保存时确保为utf-8格式。
+若您平时仅通过集成开发环境（IDE）完成编码工作，
+那推荐使用简单易用的 Atom 编辑器
+\footnote{请不要陷入无意义的编辑器党争，适合自己的才是坠吼的。} % +1s
+，并记得安装相应的语法高亮插件。
+使用windows的同学，切记不可使用windows记事本程序编辑源码，
+windows记事本编辑文本时会默认擅自插入BOM标记影响编译工作进行。
 
 “纯文本”是使用\LaTeX 排版的第二个优势，
-纯文本文件稳定易读，可以很方便地通过各种源码版本控制工具进行版本管理，
-但请注意保护自己的论文源码，避免无意上传到线上公开仓库。
+纯文本文件稳定易读，可以很方便地通过各种版本控制工具进行管理，
+但请注意保护自己的论文源码，避免意外同步到线上公开仓库。
 
 本模板使用\LaTeX 格式编写论文源码。
 \label{dirtree}
 接下来介绍一些\LaTeX 必要的编写语法和基本知识，
-以便同学们在遇到问题时能尽量准确的描述以寻求社区或个人协助。
+以便您在遇到问题时能尽量准确地描述以寻求社区或个人协助。
 现在您可以分屏一边阅读本文一边阅读本文源码
 （本章源码在\texttt{contents/whyla.tex}）
 来最直观地了解基本语法。
@@ -102,6 +102,8 @@ windows记事本程序，另外，文本保存时确保为utf-8格式。
         child { node {contents/}
             child{ node {abstract\_chinese.tex}} 
             child{ node {abstract\_english.tex}} 
+% 如果您在这里忘记逃逸下划线，靠编译错误信息根本无法发现
+% 如果您不知道我在这里说什么，请继续往后看
             child{ node {elem.tex}}
             child{ node {intro.tex}}
             child{ node {whyla.tex}}
@@ -117,8 +119,6 @@ windows记事本程序，另外，文本保存时确保为utf-8格式。
     \end{tikzpicture}
     \caption{论文源码树}
 \end{figure}
-% 如果您在这里忘记逃逸下划线，靠编译错误信息根本无法发现
-% 如果您不知道我在这里说什么，请继续往后看
 
 在文本编辑器中另开一个标签或分区打开\texttt{main.tex}，
 从\texttt{\textbackslash documentclass\{...\}}
@@ -130,7 +130,7 @@ windows记事本程序，另外，文本保存时确保为utf-8格式。
 （请优先选用只读模式打开样式文件），
 导言区仅描述了插图引用的目录和样式表引用的变量值。
 在导言区之后，即是文档内容的撰写，
-鉴于论文篇幅较大，本模板建议按章节分立论文源码。
+鉴于论文篇幅较大，本模板建议按章节分别编写论文源码。
 
 \section{探索学习}
 如本节标题，本文不会系统地介绍\LaTeX 的各项语法标记。
@@ -147,10 +147,10 @@ windows记事本程序，另外，文本保存时确保为utf-8格式。
 % \footnote{此处标记实为\texttt{subsubsection}。
 % 在连续排版等宽字体时，
 % 断行算法容易失控造成溢出版心，
-% 如果您认为应极力避免一切溢出版心的排版行为时，
+% 如果您认为应极力避免任何溢出版心的排版行为时，
 % 请仅在文档内容稳定后再对此细节做调整。}。
 强烈不建议使用到第四级标题x.x.x.x，
-学院论文模板要求从第四级标题开始不得进入目录。
+学院论文模板也要求从第四级标题开始不得进入目录。
 考虑到这种需求多见于论文第二章所谓相关技术介绍时，
 部分同学列举一些背景概念时使用，
 从美观角度和大部分学位论文的篇幅考虑，
@@ -158,15 +158,15 @@ windows记事本程序，另外，文本保存时确保为utf-8格式。
 
 % htbp 什么的现在不要管
 \begin{figure}[htbp]
-    \centering  % 学位论文规定图表皆水平居中**版心** 在 zjuthesis.cls 搜「版心设置」
-    \includegraphics[width = .4\linewidth]{plus-1.jpeg} % 设定图片宽度相对于**版心**宽度，图片文件资源名
+    \centering  % 学位论文规定图表皆水平居中于版心 在 zjuthesis.cls 搜「版心设置」
+    \includegraphics[width = .4\linewidth]{plus-1.jpeg} % 设定图片宽度相对于版心宽度，图片文件资源名
     \caption{华莱士在其著作《马来群岛》中绘制的飞蛙速写} % 图的题注
     \label{fig:plus-1} % 与 autoref 关联，设定交叉引用和显示「图x.x」
 \end{figure}
 
 
-% 梦里不觉__已深, ____岂是为他人。
-\subparagraph{华莱士飞蛙}
+% 梦里不觉 ☐ 已深, ☐ ☐ 岂是为他人。
+\subparagraph{华莱士飞蛙} % +1s
 华莱士飞蛙 (Rhacophorus nigropalmatus) ，
 得名于它的发现者——生物学家阿尔弗雷德 · 华莱士 (Alfred R. Wallace)。
 华莱士飞蛙生活在马来半岛的森林里，
@@ -174,19 +174,19 @@ windows记事本程序，另外，文本保存时确保为utf-8格式。
 除了交配和产卵，它们几乎从不下树……
 如\autoref{fig:plus-1} 所示。
 
-如你从本章源码所见，单个换行符并不会编译成一个换行符，
-而两个或者超过两个换行符将被解释成一个分段，
-类似HTML中新建了一个\texttt{<p>}标签。
-如果需要在文章中随意插入一个换行，
-则需要在源码文件中编写$\backslash\backslash$实现。
-注意此标记一般仅在排版表格时，
-或者后期调整少数溢出版心的情况时使用。
+您是否发现了源码中单个换行符并不会编译成文档中的一个换行符，
+而两个或者超过两个换行符将被解释成一个分段
+（类似HTML中新建了一个\texttt{<p>}标签）。
+如果需要在文章中随意插入一个换行（类似于\texttt{<br>}标签），
+则应该在源码文件中编写$\backslash\backslash$实现。
+注意此标记一般仅在排版表格时使用，
+或者活用在后期微调上。
 
 由于\LaTeX 的命令会使用几个固定的字符，
 同各种编程语言处理字符串时一样，
 当输出此类字符时需要使用一定的逃逸策略，
 如果您的论文编译错误，请\textbf{优先检查是否在源码输入了未经逃逸的字符}
-\footnote{就连写这份文档的时候都还是不记得给下划线逃逸}。
+\footnote{鄙人在写这份文档的时候都还是会忘记记给下划线逃逸}。
 逃逸规则见\autoref{tab:escape} 所示。
 
 
@@ -219,16 +219,17 @@ windows记事本程序，另外，文本保存时确保为utf-8格式。
 然而，在\textbf{中文环境}下，并不需要通过空格实现如西文那样的分词，
 所以本模板在XeCJK环境的初始化配置上取消了如此产生空格的规则。
 利用这样的改动，
-您在编写论文源码时可随时换行，
-不必在意会产生多余的空格。
+您在编写论文源码时可按照您的行文思路进行换行，
+不必担心会产生多余的空格。
 随着您的行文篇幅渐巨，
-您将慢慢体会到何为\textbf{内容}与\textbf{样式}分离的思想。
+您将慢慢体会到这种编辑文本的优势所在——
+\textbf{内容}与\textbf{样式}的分离。
 
 关于输出英文半角双引号，需要在源码编写两个反引号(``double grave'')。
 而中文双引号则直接在源码中编写一对全角双引号即可。
 鉴于目前大陆地区的官方标准明确规定使用此种方法标记引号，
-请不要在论文中使用台湾地区和日本等地使用的直排引号
-\footnote{网页中文排版习惯近年来有惯用直排引号的趋势，不做讨论}。
+请不要在论文中使用台湾地区和日本等地使用的直角引号
+\footnote{网页中文排版近年来有惯用直角引号的趋势，这里不做讨论}。
 
 % 论文除了第一章绪论和终章总结与展望， 最后都需要撰写一节“本章小结”。
 % 活用注释作为 ToDo 提醒是一个好习惯
