--- a/contents/thanks.tex
+++ b/contents/thanks.tex
@@ -10,7 +10,7 @@
 
 衷心感谢ZJU-Awesome项目作者之一机械工程学院的陈九历同学耐心解答在下的多次疑问。
 
-% 难道不应该感谢世界和雪菜（大雾）
+% 难道不应该感谢世界（大雾）
 也感谢夏目友人帐能让我在论文写作过程中保持着一份平静，
 最后感谢这份文稿前的你，能仔细阅读到这一页。
 
@@ -19,7 +19,9 @@
 \begin{minipage}{14em}
     \begin{flushright}
         君之名\\
-        于浙江大学软件学院\\ % 学院要求的格式 - -#
-        2016年4月18日   % 与封面论文提交时间一致
+        %于浙江大学软件学院\\ % 学院要求的格式 - -#
+        %2016年4月18日   % 与封面论文提交时间一致
+        2017年1月1日\\
+        于老和山下
     \end{flushright}
 \end{minipage}
