封面中文题目、英文题目、提交日期加粗，参考文献去除S.n, S.l更完美

--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 % !Mode:: "TeX:UTF-8"
 % !TEX builder = LATEXMK
 % !TEX program = xelatex
-\documentclass[master,oneside]{zjuthesis} % 如果你的论文不满80页，还是单面印刷吧
+\documentclass[master,oneside,AutoFakeBold]{zjuthesis} % 如果你的论文不满80页，还是单面印刷吧
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 开始填写前置部分使用的变量
